--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <h1>Git urok</h1
-<p> novoe izmeninenie</p>
-<p> wtoroje izmeninenie</p>
+<p> tretje izmeninenie</p>
+
 </body>
 </html>
